--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+*.jpg
+*.mp4
+*.png
+*.gif
+*.webm
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -14,7 +20,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
